<resources>
    <string name="app_name">Corner News</string>
    <string name="save">Save</string>
    <string name="search">Search...</string>
    <string name="map_key" translatable="false">AIzaSyBR442ETc1ih8UI_amGf-FPE7FE7eC8yn4</string>
    <string name="AlertInstance_description">Description...</string>
    <string name="view_selected_image">View Selected Images</string>
    <string name="view_selected_video">View Selected Videos</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="member_login">Member login</string>
    <string name="green">Safe &amp; Cool</string>
    <string name="orange">Unsafe</string>
    <string name="red">Dangerous</string>
    <string name="alert_category">Category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_membership">Begin Member</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="login">login</string>
    <string name="empty">Empty</string>
    <string name="title">Title</string>
    <string name="log_out">Log out</string>
    <string name="corner_news">Corner News</string>
    <string name="AlertInstance_feedback">AlertInstance Feedback</string>
    <string name="view_image">View images</string>
    <string name="view_video">View videos</string>
    <string name="clickDelete">Click on any circled areas</string>
    <string name="text_to_start">This Beta application does not yet support black mode and portrait mode!</string>
    <string name="notice">Notice</string>
    <string name="email">Email Address</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="AlertInstance_color">AlertInstance Color</string>
    <string name="AlertInstance_size">AlertInstance Size</string>
    <string name="empty_video">Empty Video</string>
    <string name="empty_image">Empty Image</string>
    <string name="to_refresh">: To refresh GoogleMaps content</string>
    <string name="to_edit">: To edit unregistered circled areas</string>
    <string name="to_clear">: To clear unregistered circled areas</string>
    <string name="to_delete">: To delete registered circled areas</string>
    <string name="upload">Upload :</string>
    <string name="red_circled_area">Red Circled Area</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resetting_password">Resetting Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="time">Time</string>
    <string name="red_AlertInstance">Red Alert</string>
    <string name="orange_AlertInstance">Orange Alert</string>
    <string name="date">Date</string>
    <string name="alert_name">Alert Name</string>
    <string name="alert_date_time">Alert Date Time</string>
    <string name="green_alertinstance">Green Alert</string>
</resources>