<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_for_help_in_map_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="120dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_refresh_24"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="30dp"
                android:text="@string/to_refresh"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginTop="32dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_edit_24"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="14.5dp"
                android:text="@string/to_edit"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginTop="65dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_close_24"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="6dp"
                android:text="@string/to_clear"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="97dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_delete_forever_24"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="16dp"
                android:text="@string/to_delete"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</RelativeLayout>