<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/purple_200"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/person_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="5dp"
        android:background="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/member_login"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/member_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/member_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/person_icon"
        app:layout_constraintBottom_toTopOf="@id/edit_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_person"
        android:background="@drawable/bg_round"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/member_login"
        app:layout_constraintBottom_toTopOf="@id/edit_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableLeft="@drawable/ic_baseline_person" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_https_24"
        android:background="@drawable/bg_round"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableLeft="@drawable/ic_baseline_https_24" />

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/member_login"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

<!--    <androidx.appcompat.widget.AppCompatCheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="5dp"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="Remember Me"-->
<!--        app:layout_constraintTop_toBottomOf="@id/edit_pass"-->
<!--        app:layout_constraintBottom_toTopOf="@id/button_login"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        android:layout_marginRight="100dp"/>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:text="@string/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/purple_400"
        app:layout_constraintTop_toBottomOf="@id/edit_pass"
        app:layout_constraintBottom_toTopOf="@id/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        android:layout_marginRight="120dp"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintBottom_toTopOf="@id/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create_account"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:gravity="center"
        style="?android:listSeparatorTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password"
        app:layout_constraintBottom_toBottomOf="@id/text_view_forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_api_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_sign_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/bg_round"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>