<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewDetailOnAlertInstanceFragment"
    android:orientation="vertical"
    android:background="@color/purple_200">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/circle_title_in_view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AlertInstance_feedback"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linear_for_date_time"
            app:layout_constraintVertical_chainStyle="packed"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_for_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/circle_title_in_view_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/linear_media_view_view"
                android:background="@drawable/bg_round">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alert_start_date_in_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/date"
                    android:layout_gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alert_start_time_in_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:text="@string/time"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_media_view_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/circle_title_in_view_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_swipe_view"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_photo_album"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_video_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="120dp"
                android:background="@drawable/ic_baseline_video_album"
                android:padding="10dp"
                android:layout_marginStart="120dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/layout_swipe_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_round"
            app:layout_constraintTop_toBottomOf="@id/linear_media_view_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_swipe_view"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_download"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/download_selected_item"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_arrow_circle_down_24"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageSwitcher
                android:id="@+id/image_switcher_for_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"/>

            <VideoView
                android:id="@+id/video_view_for_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_amount_in_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/layout_swipe_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/description_view"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/amount_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/empty_image"
                android:background="@drawable/bg_round"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/amount_video_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text="@string/empty_video"
                android:background="@drawable/bg_round"
                android:padding="10dp"
                android:layout_marginStart="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_view"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:hint="@string/AlertInstance_description"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/bg_round"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/layout_amount_in_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>